Prevent times ever wrapping

--- a/static/style.less
+++ b/static/style.less
@@ -257,3 +257,7 @@ input::-webkit-inner-spin-button {
 	border-bottom-color: @state-danger-border;
 	color: @state-danger-text;
 }
+
+time {
+	white-space: nowrap;
+}
